inicio da pagina, faltando implemtar certo os texto para o lado direito

--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-<index class="html">bora começar O PROJETO</index>
+<!DOCTYPE html>
+<html lang="en">
+
+<head class="head">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+    <style>
+        body {
+            font-family: 'Roboto', sans-serif;
+        }
+    </style>
+  <link rel="stylesheet" href="style.css">
+</head>
+<header class="header">
+    <body class="body">
+  <h2 class="h2">Welcome</h2>
+  <p class="P">Thanks for participating in the poll</p>
+  <button class="button">let's go</button>
+  <img class="img" src="imagem/zero.svg">
+</body>
+</header>
+</html>
