mudei as estruturas para o lado certo

--- a/index.html
+++ b/index.html
@@ -1,24 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head class="head">
+<head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-    <style>
-        body {
-            font-family: 'Roboto', sans-serif;
-        }
-    </style>
   <link rel="stylesheet" href="style.css">
 </head>
-<header class="header">
-    <body class="body">
-  <h2 class="h2">Welcome</h2>
-  <p class="P">Thanks for participating in the poll</p>
-  <button class="button">let's go</button>
-  <img class="img" src="imagem/zero.svg">
+
+<body>
+  <section class="container">
+    <img src="imagem/zero.svg" alt="cartoon photo" class="img">
+    <div class="wrapper">
+      <h1 class="title">Welcome</h1>
+      <p class="paragraph">Thanks for participating in the poll</p>
+      <button class="btn">Let's go</button>
+    </div>
+  </section>
 </body>
-</header>
+<body>
+  <section class="container">
+    <img src="imagem/one.svg" alt="cartoon photo" class="img1">
+    <div class="wrapper">
+      <h1 class="title1">Necessities of working in
+        financial markets
+        </h1>
+      <p class="paragraph1">This research is to find the reasons for the failure of people in financial markets. The results of this survey will be emailed to you along with the analysis of our experienced experts.</p>
+      <button class="btn">Back to Home</button> <button class="bntt">Fill out the form
+      </button>
+    </div>
+  </section>
+</body>
 </html>
