--- a/<pagina2>.html
+++ b/<pagina2>.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>pagina1</title>
+  <title>titulo</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
