--- a/pagina3.html
+++ b/pagina3.html
@@ -4,44 +4,45 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>pagina2</title>
+  <title>pagina3</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="./assets/css/StatusConta/statusConta.css">
 </head>
 <body>
   <section class="container">
     <div class="conteudo">
-      <img src="imagem/two.svg" alt="cartoon photo" class="conteudo__Img">
+      <img src="imagem/three.svg" alt="cartoon photo" class="conteudo__Img">
       <div class="statusConta">
         <div class="statusConta__Div1">
-          <h3>What is the status of your account?</h3>
+          <h3>How do you decide to invest?</h3>
           <span class="statusConta__Retangulo">
-            <img class="statusConta__Vector" src="imagem/Vector 1.svg">
-            <a class="statusConta__texto"> I have not created an account yet.</a>
+            <img class="statusConta__Vector1" src="imagem/Vector 1.svg">
+            <a class="statusConta__texto"> I have not invested yet.</a>
           </span>
         </div>
         <article class="statusConta__Div2">
-          <h3>In which financial markets do you operate?</h3>
+          <h3>What resources have you used or are you using for your training?
+        </h3>
           <div>
-            <input type="radio" name="name1" id="" class="statusConta__radio">
-            <label>Stock Market</label>
+            <input type="checkbox" name="name1" id="" class="statusConta__checkbox">
+            <label>Books and articles</label>
           </div>
           <div>
-            <input type="radio" name="name1" id="" class="statusConta__radio">
-            <label>foreign exchange</label>
+            <input type="checkbox" name="name1" id="" class="statusConta__radio">
+            <label>YouTube tutorial videos</label>
           </div>
           <div>
-            <input type="radio" name="name1" id="" class="statusConta__radio">
-            <label>commodity</label>
+            <input type="checkbox" name="name1" id="" class="statusConta__radio">
+            <label>online or face to face courses</label>
           </div>
           <div>
-            <input type="radio" name="name1" id="" class="statusConta__radio">
-            <label>bond market</label>
+            <input type="checkbox" name="name1" id="" class="statusConta__radio">
+            <label>experience with little investment</label>
           </div>
-          <div>
+          <!-- <div>
             <input type="radio" name="name1" id="" class="statusConta__radio">
             <label>cryptocurrency market</label>
-          </div>
+          </div> -->
         </article>
         <div>
           <div class="statusConta__Div3">
