faltou muita coisa

--- a/pagina3.html
+++ b/pagina3.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -38,12 +38,12 @@
           <div>
             <input type="checkbox" name="name1" id="" class="statusConta__radio">
             <label>experience with little investment</label>
-          </div>
+          </div> -->
           <!-- <div>
             <input type="radio" name="name1" id="" class="statusConta__radio">
             <label>cryptocurrency market</label>
           </div> -->
-        </article>
+        <!-- </article>
         <div>
           <div class="statusConta__Div3">
             <div class="statusConta__DivButton">
@@ -56,7 +56,7 @@
       </div>
     </div>
   </section>
-</body>
+</body> -->
 <!-- <nav>
     <ul>
       <li><a href="index.html">Página Inicial</a></li>
