--- a/pagina2.html
+++ b/pagina2.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -63,4 +63,4 @@
       <li><a href="pagina2.html">Página 2</a></li>
     </ul>
   </nav> -->
-</html>
+</html> -->
